bynkc/tests/fixtures/positive/146_cron_simple/src/reaper.karn
context reaper

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
