bynkc/tests/fixtures/negative/114_cron_bad_return/src/svc.karn
context svc

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[Int, String]] {
    Ok(5)
  }
}
